--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Full Stack <span>Software Engineer</span></h1>
+                    <h1>DevOps <span>Engineer</span></h1>
                     <p>I design and develop exceptional digital experiences that make an impact on people's lives. Currently specializing in building responsive web applications with modern technologies.</p>
                     <p class="typing-text">Passionate about clean code and innovative solutions</p>
                     <div style="margin-top: 30px;">
@@ -1485,4 +1485,5 @@
         });
     </script>
 </body>
+
 </html>
