--- a/index.html
+++ b/index.html
@@ -1179,8 +1179,9 @@
                         <h3 class="project-title">CTP & CTQ Data Entry App</h3>
                         <p class="project-desc">A Power App for recording CTQ and CTP checkpoints per style across the plant, allowing users to add, edit, and delete entries while providing real-time visibility through an integrated dashboard.</p>
                         <div class="project-tech">
-                            <span class="tech-tag">Power App</span>
-                            <span class="tech-tag">Power FX</span>
+                            <span class="tech-tag">Power BI</span>
+                            <span class="tech-tag">DAX</span>
+                            <span class="tech-tag">M</span>
                             <span class="tech-tag">Sharepoint List</span>
                             <span class="tech-tag">SharePoint Excel Files</span>
                         </div>
@@ -1487,4 +1488,5 @@
 </body>
 
 </html>
+
 
