--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                         </div>
                         <div class="profile-info">
                             <h2>Supuni Udeshika</h2>
-                            <p>DevOps Engineer</p>
+                            <p>Software Engineer</p>
                             <div class="social-links">
                                 <a href="https://github.com/SupuniUdeshika" class="social-link"><i class="fab fa-github"></i></a>
                                 <a href="https://www.linkedin.com/in/supuni-udeshika-51a6ba2a4/" class="social-link"><i class="fab fa-linkedin"></i></a>
@@ -1488,6 +1488,7 @@
 </body>
 
 </html>
+
 
 
 
